<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="temperature_cpu">Processor\ntemperature</string>
    <string name="working_time">%d hours %d minutes</string>
    <string name="gb_fraction_garbage">/%.1f GB</string>
    <string name="clean_danger_title">Cleanup required!</string>
    <string name="garbage_not_found">No junk files\ndetected</string>
    <string name="mb">%dMb</string>
    <string name="type_extra">Extra\n+60%</string>
    <string name="normal_mode">Normal mode:</string>
    <string name="type_normal">Normal\n+10%</string>
    <string name="degree">%d℃</string>
    <string name="coolling_done">CPU cooled,\ntemperature normalized</string>
    <string name="free_memory_size">The storage is free\n%.1f GB</string>
    <string name="cooling">Cool</string>
    <string name="normal_temperature">Normal processor\ntemperature is 25–30℃</string>
    <string name="cleared">Cleaned</string>
    <string name="improve_working_time_by_percent">Phone uptime \nincreased by %d %%</string>
    <string name="boost_danger_title">Memory Overloaded!\nneeds speeding up!</string>
    <string name="clean_danger_desc">Free memory from junk</string>
    <string name="cooling_danger_title">Processor overheated!\nCooling required!</string>
    <string name="storage">Storage</string>
    <string name="clean_done">Garbage files deleted.</string>
    <string name="cooling_danger_desc">Close background applications</string>
    <string name="ready">Done!</string>
    <string name="boost_battery">Keep your phone up and running</string>
    <string name="gb">%.2f GB</string>
    <string name="battery_boost">Extend</string>
    <string name="type_save_battery_title">Extend work modes:</string>
    <string name="type_ultra">Ultra\n+30%</string>
    <string name="finded_junk_file">Trash\nfiles detected</string>
    <string name="cleaning">Cleanup</string>
    <string name="clean">Clean up</string>
    <string name="clean_junks_safely">Deleting junk\nfiles is absolutely\nsafe</string>
    <string name="cooling_process">Cooling</string>
    <string name="danger_boost_off">Freed up %.2f GB\nPhone is faster by %d %%</string>
    <string name="description_go_settings">To perform this function, we need permission to change system settings</string>
    <string name="privacy_policy"><u>Privacy policy</u></string>
    <string name="boost">Speed up your phone</string>

    <!--  new  -->

    <array name="battery_normal">
        <item>Reduces brightness by 70%</item>
    </array>

    <array name="battery_ultra">
        <item>Reduces brightness by 80%</item>
        <item>Closes background apps</item>
    </array>

    <array name="battery_extra">
        <item>Reduces brightness by 90%</item>
        <item>Closes background apps</item>
        <item>Disable Wi-Fi</item>
        <item>Disable Bluetooth</item>
    </array>

    <array name="optimization">
        <item>Deleting background processes...</item>
        <item>Clearing system paths...</item>
        <item>Adjusting system keys...</item>
        <item>Checking unused components...</item>
        <item>Disconnect from unnecessary GPS towers...</item>
    </array>

    <string name="app_name" translatable="false">Smart Cleaner:\nPhone Clean</string>
    <string name="type_description_normal">Normal mode activates restrictions:</string>
    <string name="type_description_ultra">Ultra mode activates restrictions:</string>
    <string name="type_description_extra">Extra mode activates restrictions:</string>
    <string name="normal">Normal\nmode</string>
    <string name="ultra">Ultra\nmode</string>
    <string name="extra">Extra\nmode</string>
    <string name="normal_mode_activated">Normal mode activated</string>
    <string name="ultra_mode_activated">Ultra mode activated</string>
    <string name="extra_mode_activated">Extra mode activated</string>
    <string name="optimize">Optimize</string>
    <string name="junk">Junk</string>
    <string name="duplicate">Duplicate</string>
    <string name="energy">Energy</string>
    <string name="ads_off">ADS off</string>
    <string name="settings">Setting</string>
    <string name="go_settings_description">To perform this function, you need to give permission in the settings yourself</string>
    <string name="battery_boosted">Optimized!</string>
    <string name="battery_unboosted">You need to increase the working time of the phone!</string>
    <string name="optimization">Optimization…</string>
    <string name="title_dialog_bluetooth">For Extra mode, you need access to the bluetooth settings</string>
    <string name="dialog_bluetooth_description">Allow the app to access bluetooth settings to increase battery life</string>
    <string name="btn_continue">Next</string>
    <string name="get_permission">We need permission</string>
    <string name="dialog_write_setting_description">We need permission to change the system settings so that we can increase the operating time of your device</string>
    <string name="cancel">Close</string>
    <string name="allow">Allow</string>
    <string name="done">Done</string>
    <string name="advice">We recommend running these features</string>
    <string name="fun_battery">Battery saver</string>
    <string name="ram_unboosted">Optimization is recommended</string>
    <string name="ram_boosted">Apps running in the background are closed!The phone has been successfully optimized!</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="used">Used</string>
    <string name="gb_one_after_dot">%.2f Gb</string>
    <string name="gb_fraction">/%.2f GB</string>
    <string name="free">Free RAM</string>
    <string name="ram">Total amount of RAM</string>
    <string name="boosted">Apps running in the background are closed!</string>
    <string name="boosted_desc">The phone has been successfully optimized</string>
    <string name="boost_description">Close apps running in the background to free up memory on your device</string>
    <string name="description_start_first_language_dialog">The language of your device is not supported by our application, English is set by default.\n\nYou can change the language right inside the app.</string>
    <string name="usage_state_description">Our application requires permissions so that you can view count of apps running in the background</string>
    <string name="permission_required">Permission required</string>
    <string name="device_information">Device Information</string>
    <string name="apps">Apps</string>
    <string name="count_of_applications_running_in_the_background">Count of applications running in the background</string>
    <string name="send_command_to_close_applications_running_in_the_background">Send command to close applications running in the background</string>
    <string name="the_command_to_close_applications_running_in_the_background_has_been_sent">The command to close applications running in the background has been sent</string>
    <string name="please_wait_the_download_is_in_progress">Please, wait, the download is in progress</string>
</resources>