<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_home_fun">

    <ImageView
        android:id="@+id/btn_cancel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_cancel_dialog"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/golos_bold"
        android:text="@string/get_permission"
        android:textColor="@color/purple"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel_dialog"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_dialog"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/dialog_write_setting_description"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/golos_medium"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:background="@drawable/bg_button_cancel"
        android:fontFamily="@font/golos_medium"
        android:text="@string/cancel"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"
        app:layout_constraintStart_toStartOf="@+id/dialog_description"
        app:layout_constraintTop_toBottomOf="@id/dialog_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_3sdp"
        android:background="@drawable/bg_button_boost_on"
        android:text="@string/allow"
        android:textColor="@color/white"
        android:fontFamily="@font/golos_medium"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="@+id/dialog_description"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>