<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.boost.BoostFragment">

    <TextView
        android:id="@+id/tv_boost_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/golos_regular"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <yinkio.android.customView.progressBar.ArcCircleProgressBar
        android:id="@+id/circular_progress_temperature_percent"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        app:canalColor="@color/white"
        app:canalHasShadow="false"
        app:canalWidth="@dimen/_6sdp"
        app:indicatorColor="@color/blue"
        app:indicatorEndAngle="270"
        app:indicatorStartAngle="-90"
        app:indicatorWidth="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_boost_title"
        app:progress="65" />

    <TextView
        android:id="@+id/tv_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/golos_regular"
        android:maxLines="1"
        android:text="@string/degree"
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintBottom_toBottomOf="@+id/circular_progress_temperature_percent"
        app:layout_constraintEnd_toEndOf="@+id/circular_progress_temperature_percent"
        app:layout_constraintStart_toStartOf="@+id/circular_progress_temperature_percent"
        app:layout_constraintTop_toTopOf="@+id/circular_progress_temperature_percent" />

    <TextView
        android:id="@+id/tv_battery_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/golos_bold"
        android:gravity="center_horizontal"
        android:text="@string/cooling_process"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circular_progress_temperature_percent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_danger_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_main_for_params"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/golos_regular"
        android:paddingStart="@dimen/_22sdp"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/cooling_danger_title"
        android:textColor="@color/red"
        android:textSize="@dimen/_12ssp"
        app:drawableStartCompat="@drawable/ic_danger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_battery_name" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_danger_description_off"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_main_for_params"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/golos_regular"
        android:paddingStart="@dimen/_22sdp"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/coolling_done"
        android:textColor="@color/green"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_danger_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_battery_name" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_danger_description_off,tv_danger_description" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_working_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:background="@drawable/bg_main_for_params"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_22sdp"
        android:paddingVertical="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/golos_medium"
            android:text="@string/temperature_cpu"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/golos_regular"
            android:text="@string/normal_temperature"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/iv_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_thermometer_red"
        android:layout_marginEnd="@dimen/_32sdp"
        app:layout_constraintBottom_toBottomOf="@+id/container_working_time"
        app:layout_constraintEnd_toEndOf="@+id/container_working_time"
        app:layout_constraintTop_toTopOf="@+id/container_working_time" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_boost_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@color/blue"
        android:drawableEnd="@drawable/ic_white_fire"
        android:fontFamily="@font/golos_regular"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="@string/cooling"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>