<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraund_main"
    tools:context=".functions.boost.BoostFragment">

    <ImageButton
        android:id="@+id/btn_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:background="@color/black"
        android:src="@drawable/ic_arrow_go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_boost_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/golos_regular"
        android:gravity="center_horizontal"
        android:text="@string/cleaning"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_go_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_go_back" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_working_time"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_marginTop="@dimen/_37sdp"
        android:background="@drawable/bg_main_for_params"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@+id/container_circle_progress_bar"
        app:layout_constraintStart_toStartOf="@+id/btn_go_back"
        app:layout_constraintTop_toBottomOf="@id/tv_boost_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/golos_medium"
            android:text="@string/finded_junk_file"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/golos_regular"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/clean_junks_safely"
            android:textColor="@color/black"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/container_circle_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/bg_main_for_params"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/container_working_time"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container_working_time">

        <TextView
            android:id="@+id/tv_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/golos_regular"
            android:text="@string/mb"
            android:maxLines="1"
            android:textColor="@color/red"
            android:textSize="@dimen/_16ssp"
            android:layout_marginEnd="@dimen/_7sdp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_danger_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/bg_main_for_params"
        android:fontFamily="@font/golos_regular"
        android:paddingStart="@dimen/_12sdp"
        android:text="@string/clean_danger_title"
        android:textColor="@color/red"
        android:textSize="@dimen/_12ssp"
        android:paddingVertical="@dimen/_14sdp"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/_8sdp"
        app:drawableStartCompat="@drawable/ic_danger"
        app:layout_constraintEnd_toEndOf="@+id/container_circle_progress_bar"
        app:layout_constraintStart_toStartOf="@+id/container_working_time"
        app:layout_constraintTop_toBottomOf="@+id/container_working_time" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_danger_description_off"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/bg_main_for_params"
        android:fontFamily="@font/golos_regular"
        android:paddingStart="@dimen/_12sdp"
        android:paddingVertical="@dimen/_14sdp"
        android:gravity="center_vertical"
        android:text="@string/clean_done"
        android:textColor="@color/green"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        android:drawablePadding="@dimen/_8sdp"
        app:drawableStartCompat="@drawable/ic_danger_off"
        app:layout_constraintEnd_toEndOf="@+id/container_circle_progress_bar"
        app:layout_constraintStart_toStartOf="@+id/container_working_time"
        app:layout_constraintTop_toBottomOf="@+id/container_working_time" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_danger_description_off,tv_danger_description" />

    <View
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_bottom_sheet"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_clean"
        android:layout_marginBottom="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@id/btn_clean"
        app:layout_constraintTop_toTopOf="@id/bottom_sheet_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_19sdp"
        android:background="@color/black"
        android:drawableEnd="@drawable/ic_arrow_go_head"
        android:fontFamily="@font/golos_regular"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        android:text="@string/clean"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>